--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 					</audio>
 
 					<button class="unstyled-button" onclick="playAudio()" type="button">
-						<img src="/img/play.png" height="50" width="60" />
+						<img src="img/play.png" height="50" width="60" />
 					</button>
 					<button class="unstyled-button" onclick="pauseAudio()" type="button">
-						<img src="/img/pausa1.png" height="50" width="60" />
+						<img src="img/pausa1.png" height="50" width="60" />
 					</button>
 
 					<small>26 de Febrero</small>
