--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<header>
 			<img class="logo" src="img/negativo color horizontal siglas.png" alt="UAEMEX" />
-			<div class="header text-center">
+			<div class="header">
 				<h1>Recorrido Histórico</h1>
 				<p>Aniversario 195</p>
 			</div>
