--- a/index.html
+++ b/index.html
@@ -7,32 +7,31 @@
 			content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
 		/>
 		<title>Recorrido Histórico</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<script src="js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="css/style.css" />
 		<script defer src="js/app.js"></script>
 	</head>
 	<body>
-		<header>
-			<img class="logo" src="img/negativo color horizontal siglas.png" alt="UAEMEX" />
-			<div class="header">
-				<h1>Recorrido Histórico</h1>
-				<p>Aniversario 195</p>
+		<nav class="navbar navbar-custom-color">
+			<div class="container-fluid justify-content-evenly">
+				<a class="navbar-brand text-light" href="#">
+					<img
+						src="img/negativo color horizontal siglas.png"
+						alt="Logo"
+						width="100"
+						class="d-inline-block"
+					/>
+				</a>
+				<a class="navbar-brand text-light" href="#">Línea de tiempo</a>
 			</div>
-		</header>
+		</nav>
 
-		<div class="lineaTiempo">
-			<div class="container left-container">
+		<div class="container-fluid lineaTiempo">
+			<div class="contenedor left-container">
 				<h2>1827</h2>
 				<div class="text-box hidden-left">
-					<audio id="myAudio">
-						<source src="audio/1827_26Febrero.mp3" type="audio/mp3" />
-					</audio>
-
-					<button class="unstyled-button" onclick="playAudio()" type="button">
-						<img src="img/play.png" height="50" width="60" />
-					</button>
-					<button class="unstyled-button" onclick="pauseAudio()" type="button">
-						<img src="img/pausa1.png" height="50" width="60" />
-					</button>
+					<audio class="d-inline" controls src="audio/1827_26Febrero.mp3"></audio>
 
 					<small>26 de Febrero</small>
 					<p>
@@ -48,7 +47,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1828</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1828_16Febrero.mp3"></audio>
@@ -63,7 +62,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1830</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1830_29Agosto.mp3"></audio>
@@ -76,7 +75,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1833</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1833_7Mayo.mp3"></audio>
@@ -95,7 +94,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1834</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1834_Diciembre.mp3"></audio>
@@ -108,7 +107,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1835</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1835_5Octubre.mp3"></audio>
@@ -121,7 +120,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1846</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1846_7Noviembre.mp3"></audio>
@@ -135,7 +134,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1847</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1847_7Junio.mp3"></audio>
@@ -149,7 +148,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1848</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1848_8Enero.mp3"></audio>
@@ -163,7 +162,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1849</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1849_17Mayo.mp3"></audio>
@@ -176,7 +175,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1850</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1850_Enero.mp3"></audio>
@@ -190,7 +189,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1851</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1851_16Octubre.mp3"></audio>
@@ -205,7 +204,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1852</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1852_27Mayo.mp3"></audio>
@@ -224,7 +223,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1857</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1857_1Mayo.mp3"></audio>
@@ -237,7 +236,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1862</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1862_5Mayo.mp3"></audio>
@@ -250,7 +249,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1864</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1864_25Octubre.mp3"></audio>
@@ -263,7 +262,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1870</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1870_Octubre.mp3"></audio>
@@ -277,7 +276,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1872</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1872_19Octubre.mp3"></audio>
@@ -291,7 +290,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1882</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1882_4Mayo.mp3"></audio>
@@ -309,7 +308,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1884</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1884_3Marzo.mp3"></audio>
@@ -322,7 +321,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1886</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1886_15Diciembre.mp3"></audio>
@@ -332,7 +331,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1887</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1887_15Septiembre.mp3"></audio>
@@ -346,7 +345,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1889</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1889_14Septiembre.mp3"></audio>
@@ -359,7 +358,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1897</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1897_5Mayo.mp3"></audio>
@@ -369,7 +368,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1898</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1898_3Marzo.mp3"></audio>
@@ -382,7 +381,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1901</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1901_Enero.mp3"></audio>
@@ -396,7 +395,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1911</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1911.mp3"></audio>
@@ -405,7 +404,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1917</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1917.mp3"></audio>
@@ -417,7 +416,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1918</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1918_12Abril.mp3"></audio>
@@ -436,7 +435,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1920</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1920_8Marzo.mp3"></audio>
@@ -449,7 +448,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1928</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1928_3Marzo.mp3"></audio>
@@ -465,7 +464,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1933</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1933_Noviembre.mp3"></audio>
@@ -478,7 +477,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1943</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1943_27Octubre.mp3"></audio>
@@ -491,7 +490,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1944</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1944_15Enero.mp3"></audio>
@@ -507,7 +506,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1946</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1946_3Marzo.mp3"></audio>
@@ -517,7 +516,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1956</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1956_21Marzo.mp3"></audio>
@@ -537,7 +536,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1964</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1964_5Noviembre.mp3"></audio>
@@ -549,7 +548,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1970</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1970_Septiembre.mp3"></audio>
@@ -562,7 +561,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1973</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1973_22Abril.mp3"></audio>
@@ -575,7 +574,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1976-1977</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1976_1977.mp3"></audio>
@@ -587,7 +586,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1979</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1973_22Abril.mp3"></audio>
@@ -599,7 +598,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1982</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1982_4octubre.mp3"></audio>
@@ -612,7 +611,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1984</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1984_31Enero.mp3"></audio>
@@ -625,7 +624,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1992</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1992_3Marzo.mp3"></audio>
@@ -638,7 +637,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>1995</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/1995_16Enero.mp3"></audio>
@@ -652,7 +651,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>1996</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/1996_5Junio.mp3"></audio>
@@ -667,7 +666,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>2000</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/2000_15Noviembre.mp3"></audio>
@@ -677,7 +676,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>2001</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/2001_18Mayo.mp3"></audio>
@@ -690,7 +689,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>2002</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/2002_13Marzo.mp3"></audio>
@@ -703,7 +702,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>2008</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/2008_21Mayo.mp3"></audio>
@@ -716,7 +715,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>2013</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/2013.mp3"></audio>
@@ -725,7 +724,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>2020</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/2020_22Octubre.mp3"></audio>
@@ -738,7 +737,7 @@
 				</div>
 			</div>
 
-			<div class="container left-container">
+			<div class="contenedor left-container">
 				<h2>2021</h2>
 				<div class="text-box hidden-left">
 					<audio controls src="audio/2021_3Marzo.mp3"></audio>
@@ -751,7 +750,7 @@
 				</div>
 			</div>
 
-			<div class="container right-container">
+			<div class="contenedor right-container">
 				<h2>2022</h2>
 				<div class="text-box hidden-right">
 					<audio controls src="audio/2022.mp3"></audio>
