Fijar barra de navegacion y agregar imagenes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<script defer src="js/app.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-custom-color">
+		<nav class="navbar navbar-custom-color fixed-top">
 			<div class="container-fluid justify-content-evenly">
 				<a class="navbar-brand text-light" href="#">
 					<img
@@ -23,7 +23,7 @@
 						class="d-inline-block"
 					/>
 				</a>
-				<a class="navbar-brand text-light" href="#">Línea de tiempo</a>
+				<a class="navbar-brand text-light" href="#">Línea Verde y Oro</a>
 			</div>
 		</nav>
 
@@ -43,6 +43,7 @@
 						para la enseñanza de todos los ramos de instrucción pública. Habrá a lo menos en
 						cada municipalidad una escuela de primeras letras, en que se enseñará a leer.
 					</p>
+					<img class="img-fluid mx-auto d-block" src="img/1.jpg" alt="" />
 					<span class="left-container-arrow"></span>
 				</div>
 			</div>
@@ -58,6 +59,8 @@
 						México, en Tlalpan, que era la capital de la entidad, se estableció en la Casa
 						de las Piedras Miyeras, propiedad de Vicente José Villada.
 					</p>
+					<img class="img-fluid mx-auto d-block" src="img/2.jpg" alt="" />
+
 					<span class="right-container-arrow"></span>
 				</div>
 			</div>
@@ -71,6 +74,7 @@
 						Por decreto del Congreso se clausura el Instituto Literario, a causa del
 						traslado de los poderes públicos a Toluca.
 					</p>
+					<img class="img-fluid mx-auto d-block" src="img/3.jpg" alt="" />
 					<span class="left-container-arrow"></span>
 				</div>
 			</div>
@@ -89,7 +93,7 @@
 						Se decreta la expropiación del Beaterio de Toluca, para asignarlo al instituto.
 						Don José María González Arratia es nombrado director.
 					</p>
-
+					<img class="img-fluid mx-auto d-block" src="img/4.jpg" alt="" />
 					<span class="right-container-arrow"></span>
 				</div>
 			</div>
@@ -103,6 +107,7 @@
 						El poeta José María Heredia toma posesión de la dirección del Instituto
 						Literario y de la Biblioteca Pública de Toluca.
 					</p>
+					<img class="img-fluid mx-auto d-block" src="img/5.jpg" alt="" />
 					<span class="left-container-arrow"></span>
 				</div>
 			</div>
@@ -116,6 +121,7 @@
 					<p>
 						Al entrar en vigor la Constitución de Las Siete Leyes se suprime el Instituto.
 					</p>
+					<img class="img-fluid mx-auto d-block" src="img/6.jpg" alt="" />
 					<span class="right-container-arrow"></span>
 				</div>
 			</div>
@@ -130,6 +136,7 @@
 						El gobernador Francisco Modesto de Olaguíbel promulga el decreto de reapertura
 						del instituto y nombra director al licenciado Felipe Sánchez Solís.
 					</p>
+					<img class="img-fluid mx-auto d-block" src="img/7.jpg" alt="" />
 					<span class="left-container-arrow"></span>
 				</div>
 			</div>
@@ -144,6 +151,7 @@
 						Se inauguran los cursos y se hace cargo de la dirección el licenciado Felipe
 						Sánchez Solís.
 					</p>
+					<img class="img-fluid mx-auto d-block" src="img/7.jpg" alt="" />
 					<span class="right-container-arrow"></span>
 				</div>
 			</div>
@@ -158,6 +166,7 @@
 						instituto. Alumnos y profesores continúan trabajando en el rancho La Virgen, al
 						sur de Toluca, en donde actualmente existe el templo de San José “El Ranchito”.
 					</p>
+					<img class="img-fluid mx-auto d-block" src="img/8.jpg" alt="" />
 					<span class="left-container-arrow"></span>
 				</div>
 			</div>
